# pm-dashboard-mcp

./: .gitignore  README.md  pyproject.toml
src/pm_dashboard/mcp_server/: __init__.py  context.py  server.py
src/pm_dashboard/mcp_server/tools/: __init__.py  discovery.py  labels.py  milestones.py  subtasks.py  tasks.py
src/pm_dashboard_mcp/: __init__.py  client.py  config.py  server.py
src/pm_dashboard_mcp/tools/: __init__.py  discovery.py  labels.py  milestones.py  subtasks.py  tasks.py
