[project]
name = "pm-dashboard-mcp"
version = "0.2.0"
description = "PM Dashboard MCP 서버 — Claude Code에서 마일스톤·태스크 CRUD"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MediSolveAI" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
pm-dashboard-mcp = "pm_dashboard_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pm_dashboard_mcp"]
